[gd_scene load_steps=13 format=3 uid="uid://byam2y7n8k5p"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_0bpdh"]
[ext_resource type="FontFile" uid="uid://bb0epgadnq1ob" path="res://assets/fonts/Maesto-Regular_demo.otf" id="2_0ctdu"]
[ext_resource type="FontFile" uid="uid://cxtr76q8hcg8u" path="res://assets/fonts/ByteBounce.ttf" id="3_2fbfq"]
[ext_resource type="AudioStream" uid="uid://b7eg4b66gft2o" path="res://assets/audio_sounds/retro_menu_hover.mp3" id="4_2fbfq"]

[sub_resource type="LabelSettings" id="LabelSettings_game_over"]
line_spacing = 0.0
font = ExtResource("2_0ctdu")
font_size = 200
font_color = Color(0.967556, 0.91468, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_thank_you"]
font = ExtResource("3_2fbfq")
font_size = 55
font_color = Color(0.9, 0.9, 0.9, 1)
outline_size = 2
outline_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_subtitle"]
font = ExtResource("3_2fbfq")
font_size = 40
font_color = Color(0.7, 0.8, 0.7, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_try_again_hover"]
bg_color = Color(0.25, 0.8, 0.35, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 12
shadow_offset = Vector2(0, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_try_again_pressed"]
bg_color = Color(0.15, 0.6, 0.25, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_try_again_normal"]
bg_color = Color(0.2, 0.7, 0.3, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_quit_hover"]
bg_color = Color(0.7, 0.35, 0.25, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_quit_normal"]
bg_color = Color(0.6, 0.3, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0bpdh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.588235, 0.745098, 1)

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="YouWinLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "YOU WIN"
label_settings = SubResource("LabelSettings_game_over")
horizontal_alignment = 1

[node name="ThankYouLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "THANK YOU FOR PLAYING!!"
label_settings = SubResource("LabelSettings_thank_you")
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GMTK GAME JAM 2025
Our first game ever!"
label_settings = SubResource("LabelSettings_subtitle")
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="TryAgainButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2fbfq")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_try_again_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_try_again_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_try_again_normal")
text = "PLAY AGAIN"

[node name="HoverSFX" type="AudioStreamPlayer2D" parent="VBoxContainer/TryAgainButton"]
stream = ExtResource("4_2fbfq")
volume_db = 5.0

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(550, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_2fbfq")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_quit_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_quit_normal")
text = "MAIN MENU"

[node name="HoverSFX" type="AudioStreamPlayer2D" parent="VBoxContainer/MainMenuButton"]
stream = ExtResource("4_2fbfq")
volume_db = 5.0

[connection signal="pressed" from="VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
